--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@
         position: relative;
         z-index: 2;
         backdrop-filter: blur(5px);
-        background: rgba(255, 255, 255, 0.05);
+        background: linear-gradient(transparent, rgba(255,255,255,0.12));
         border-radius: 0px;
         padding: 60px;
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
