--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@
 
     .hero {
         height: 100vh;
-        background: url('Conan-Wishbone.webp') top/cover no-repeat;
+        background: url('Conan-Wishbone.webp') top/cover no-repeat, linear-gradient(transparent, rgba(255,255,255,0.12));
+        backdrop-filter: blur(5px);
         display: flex;
         flex-direction: column;
         position: relative;
@@ -76,9 +77,7 @@
         align-items: center;
         text-align: center;
         position: relative;
-        z-index: 1;
-        backdrop-filter: blur(5px);
-        background: linear-gradient(transparent, rgba(255,255,255,0.12));
+        z-index: 2;
         border-radius: 0px;
         padding: 60px;
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
