--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,7 @@
 
     .hero {
         height: 100vh;
-        background: url('Conan-Wishbone.webp') top/cover no-repeat, linear-gradient(transparent, rgba(255,255,255,0.12));
-        backdrop-filter: blur(5px);
+        background: url('Conan-Wishbone.webp') top/cover no-repeat;
         display: flex;
         flex-direction: column;
         position: relative;
@@ -78,6 +77,8 @@
         text-align: center;
         position: relative;
         z-index: 2;
+        backdrop-filter: blur(5px);
+        background: linear-gradient(transparent, rgba(255,255,255,0.12));
         border-radius: 0px;
         padding: 60px;
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
