--- a/styles.css
+++ b/styles.css
@@ -123,10 +123,12 @@
                 max-width:1100px;
                 margin:0 auto;
                 display:flex;
+                align-items: center;
+                flex-wrap: nowrap;
+                flex-direction: row;
                 gap:20px;
                 justify-content:center;
-                align-items:flex-start;
-                flex-wrap:wrap;
+                
             }
 
             .album-card{
